[gd_scene load_steps=3 format=3 uid="uid://by0r1gmvtkfc2"]

[ext_resource type="Script" path="res://bosses/enemy_shooter.gd" id="1_rmx8v"]
[ext_resource type="Texture2D" uid="uid://ba5q7buji1mcl" path="res://icon.svg" id="2_gqmyo"]

[node name="Shooter" type="Area2D"]
script = ExtResource("1_rmx8v")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_gqmyo")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0

[node name="ShootingTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="BulletSpot" type="Marker2D" parent="."]
position = Vector2(0, -45)

[connection signal="timeout" from="ShootingTimer" to="." method="_on_shooting_timer_timeout"]
